Changed final resume layout. Fixed issue where overflow was affecting navbar; This was caused by app height being set at 100%. This was fixed by setting min-height to 100vh

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@ html, body, #root, .App {
 }
 
 html, body, #root, .App {
-  height: 100%;
+  min-height: 100vh;}
+
+body {
+  /* min-height: 100vh; */
 }
+
 .page {
   display: flex;
   flex-direction: column;
